Fix scrollbar issue in modal dialogs

--- a/shared/oae/css/oae.base.css
+++ b/shared/oae/css/oae.base.css
@@ -217,6 +217,7 @@ input.search-query,
 }
 
 .modal-body {
+    overflow-y: hidden;
     padding: 5px 25px 10px;
 }
 
